@@ -3,17 +3,15 @@ Hash: SHA1
 
 AUX notmuch-0.4-optional_emacs.patch 8513 RMD160 641ae43bda081fcbc1d3a24f9a68b0fb718438c6 SHA1 ab7ecd473cbfa0e8baa43538b983016e18143141 SHA256 cb7590eb251afcf03e9ba4e51d641b1cff7f977fad1595540fe70799a5a36d08
 AUX notmuch-0.5-optional_emacs.patch 9406 RMD160 0d03da950c3cded8c986b287d730142506c99bc5 SHA1 b8b478365a38e4a063a7b197780ea1267a4f184e SHA256 7c979b0486e1c7982041f9c0096f0dea88725b040a888686b2a5b6bc49a705c8
-DIST notmuch-0.4.tar.gz 309136 RMD160 d48795388d063dc7f73c8a9d0fc0b5261f10f81d SHA1 d40cb07adab0d595c64e9b73f1fd306cc9dff106 SHA256 a8ba23ce68b42dbef22563182c5b34dfbdb46494f94e8fb5694da993cba6ceef
 DIST notmuch-0.5.tar.gz 340156 RMD160 57cd41d2c2b672dffe733fcbd171082e7be8a30e SHA1 8a02dba668abdae783b94d11de01a27f9dcd6085 SHA256 c7eeb95c89c5b9cb22cc0b90abce5f923c20c982d607bf32829c989e905ff1a9
-EBUILD notmuch-0.4.ebuild 3591 RMD160 c14930a056733846d6789df8120dee8379de4bfa SHA1 80db8ab4184a934daba748ee1e56c28863849466 SHA256 2c1083d26e7c19e8df606eea1d47371d3efb6ebd98606a30462f0d83b4803748
-EBUILD notmuch-0.5.ebuild 4360 RMD160 03234888008f4cbb89fecef637c56cdf167e1ae4 SHA1 fcc5a67d4b0a1bf87794609c2935bad4f88b13d0 SHA256 bdee39c4d7d88311b314e940ff88d5f4a7d17cfe71dd9fc8d566aa12d9cf5f59
+EBUILD notmuch-0.5.ebuild 4359 RMD160 8bdc75fbf53cda921b3cedcdf6de8430764e65d4 SHA1 258449ac1919cc8e8bcbf34f21043d5799858c94 SHA256 132b21440a66b17eda7502c336addeb97941898509368b0b1edfd8039305fe2d
 EBUILD notmuch-9999.ebuild 4350 RMD160 f83bf399d46c9dc23cdb3f83eb615ff2e9e86a3e SHA1 2cb6560598950c352c64d175ff95a874ae8ef438 SHA256 ccbb56a44afeed269da5da3159a37a2176a9477b7d785b2562e753d80d40fcc0
-MISC ChangeLog 4762 RMD160 54ddbe1a0405e5c7b09f9b618c806e57f4086df1 SHA1 0eb38729f491de9e0c812ee40d996eaf3923677d SHA256 948e112864ccb8f04806b6181e07bb7c45e9db30675a473513b8e0978aa94b7f
+MISC ChangeLog 4868 RMD160 719597f9d241812e8d2075ff66b81d7f0149751f SHA1 14f788b0eadf315256dd56fc678b2fa195cfd32b SHA256 2bfd605159c2b00dd7bd6ec6174a6042d105ecb84fddf8369e7b57686c7c6a88
 MISC metadata.xml 897 RMD160 436f9558ab188a98a79dee2b25afba0ce4660f97 SHA1 f31467190638f4b59034c19c855c798b919143f4 SHA256 9408059d62680198c500a7e4727352f9195602f4550fbd25e1962b3b953c74d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0k8/MACgkQzJrj3cAXR0nxLwCgjtmlTi2LMGCqLQQcUgjAy9sQ
-5Z4AoK7kLgg8yVu4fh2rZ5qTeDImIThJ
-=Eon0
+iEYEARECAAYFAk0lbRMACgkQzJrj3cAXR0kanQCfSvma02nozAAv3eWL4Wwdjecf
+B74An1yhhCIH4NNP0eNCtnOgN1cDjvVX
+=z7vP
 -----END PGP SIGNATURE-----
