@@ -26,7 +26,7 @@ HOMEPAGE="http://notmuchmail.org/"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="X debug emacs python ruby vim zsh-completion"
 
 RDEPEND="sys-libs/talloc
