@@ -1,4 +1,3 @@
-REM 2010-12-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 mail-client/notmuch-0.5 %a
 REM 2010-12-26 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/blockdiag-0.5.2 %a
 REM 2010-12-30 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 x11-plugins/vicious-2.0.2 %a
 REM 2010-12-30 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 x11-plugins/vicious-2.0.2 %a
